Fixed Minor Errors of Alignment

--- a/styles.css
+++ b/styles.css
@@ -22,8 +22,8 @@ nav {
     position: fixed;
     top: 0;
     z-index: 100;
-    width: 100vw;
     left: 0;
+    width: 100%;
 }
 
 .logo {
@@ -67,7 +67,6 @@ ul {
 /** Hero Section **/
 .hero-section {
     height: calc(100vh - calc(1em+50px));
-    width: 100vw;
     background-image: url('./Assets/Hero-Section.jpg');
     background-size: cover;
     position: relative;
